--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@ tfoot {
     <td><img src="https://static.displate.com/857x1200/displate/2020-04-21/f8d9be3eee664a28f108f3059607e5c8_f3d4ebff80797513b66c663861c04f17.jpg" alt="Las Lady Bird" width="150px" height="auto"></td>
 	</tr>
 	<td>There's A Man In The Woods</td>
-    <td><img src="https://m.media-amazon.com/images/M/MV5BZDY5YWNkMTItOWRiMC00YTcwLWJlMWUtMTg1MWM5ZmZiOGQyXkEyXkFqcGdeQXVyNDE5MTU2MDE@._V1_.jpg" alt="There's A Man In The Woods" width="150px" height="auto"></td>
+    <td><img src="https://m.media-amazon.com/images/I/71vMMSFI2ML.jpg" alt="There's A Man In The Woods" width="150px" height="auto"></td>
     <td><img src="https://pics.filmaffinity.com/there_s_a_man_in_the_woods-262329180-large.jpg" alt="There's A Man In The Woods" width="150px" height="auto"></td>
 	</tr>
 	</table> 
